--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,11 @@
 		</plugins>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.24</version>
+		</dependency>
+	</dependencies>
 </project>
